--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.ExMod1"
         tools:targetApi="31">
         <activity
+            android:name=".SettingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DevicesActivity"
+            android:exported="false" />
+        <activity
             android:name=".LaunchActivity"
             android:exported="false" />
         <activity
