--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,24 @@
         android:theme="@style/Theme.ExMod1"
         tools:targetApi="31">
         <activity
-            android:name=".SettingActivity"
+            android:name=".Setting.SettingActivity"
             android:exported="false" />
         <activity
-            android:name=".DevicesActivity"
+            android:name=".Devices.DevicesActivity"
             android:exported="false" />
         <activity
-            android:name=".LaunchActivity"
+            android:name=".Launch.LaunchActivity"
+            android:exported="true">
+                <intent-filter>
+                    <action android:name="android.intent.action.MAIN"/>
+                    <category android:name="android.intent.category.LAUNCHER"/>
+                </intent-filter>
+        </activity>
+        <activity
+            android:name=".AddRoom.AddRoomActivity"
             android:exported="false" />
         <activity
-            android:name=".AddRoomActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".HomePage.MainActivity"
             android:exported="false" />
         <activity
             android:name=".NewResident.RegisterActivity"
